2001-07-02  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-digest.c: Formatting fixes.
	(digest_md5_challenge): Use string auth_header instead of
	GByteArray for token.
	(soup_digest_challenge): Free response GByteArray after adding
	Authorization header.

2001-07-02  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Remove _SoupMessagePrivate bits
	covered by soup-transfer.

	* src/soup-core/soup-queue.c: Use soup-transfer.
	(soup_queue_error_cb): Remove handling of buggy MS IIS server
	tranferring partial content then closing connection. Report this
	as SOUP_ERROR_IO instead.

	* src/soup-core/soup-httpd.c: Use soup-transfer.

	* src/soup-core/soup-transfer.[ch]: Added. HTTP Transport
	abstraction used to clean up client and standalone/cgi server code
	duplication.

	* configure.in: Bump version to 0.3.

	* src/soup-core/soup-queue.c (soup_check_used_headers): Use
	toupper in switch instead of upper/lower cases for each.

	* src/soup-core/soup-httpd.c: Declare apache dummy method
	implementations to avoid warnings.

2001-06-27  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-digest.c: Largely gutted. Made RFC 2617
	compliant. Removed RFC 2831 compliance.
	(soup_digest_challenge): Implemented.

2001-06-21  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-message.c (soup_message_new): Do a
	g_return_val_if_fail() on the SoupContext being passed in so we don't
	generate a bad SoupMessage.

2001-06-19  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-context.c (soup_context_from_uri): Use
	soup_context_uri_hash and soup_context_uri_equal for matching
	existing server contexts instead of just matching on path.
	(soup_context_uri_hash): Added. Returns a hash of the user, authmech,
	password, and path of a given SoupUri.
	(soup_context_uri_equal): Added. Returns TRUE if the user, authmech,
	password, and path of a two SoupUris match.

2001-06-15  Alex Graveley  <alex@ximian.com>

	* configure.in: add check for unistd.h
